--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,18 +20,18 @@ spring:
     console:
       enabled: true
 
-# 운영 환경
----
-spring.profiles: set1
-spring.profiles.include: real-db
-
-server:
-  port: 8081
-
----
-spring.profiles: set2
-spring.profiles.include: real-db
-
-server:
-  port: 8082
+## 운영 환경
+#---
+#spring.profiles: set1
+#spring.profiles.include: real-db
+#
+#server:
+#  port: 8081
+#
+#---
+#spring.profiles: set2
+#spring.profiles.include: real-db
+#
+#server:
+#  port: 8082
 
